--- a/Scan/util/source/CMakeLists.txt
+++ b/Scan/util/source/CMakeLists.txt
@@ -1,14 +1,20 @@
-if(USE_ROOT AND BUILD_SCOPE)
-	if(USE_HRIBF)
-		add_executable(scope scope.cpp $<TARGET_OBJECTS:ScanorObjects>)
-		target_link_libraries(scope ${HRIBF_LIBRARIES})
-	else()
-		add_executable(scope scope.cpp)
-	endif()
+if(USE_ROOT)
+	if (BUILD_SCOPE)
+		if(USE_HRIBF)
+			add_executable(scope scope.cpp $<TARGET_OBJECTS:ScanorObjects>)
+			target_link_libraries(scope ${HRIBF_LIBRARIES})
+		else()
+			add_executable(scope scope.cpp)
+		endif()
+	
+		target_link_libraries(scope ScanStatic ${ROOT_LIBRARIES})
+	   install(TARGETS scope DESTINATION bin)
+	endif (BUILD_SCOPE)
 
-	target_link_libraries(scope ScanStatic ${ROOT_LIBRARIES})
-   install(TARGETS scope DESTINATION bin)
-endif(USE_ROOT AND BUILD_SCOPE)
+	add_executable(traceQdcScan TraceQdcScan.cpp)
+   target_link_libraries(traceQdcScan ScanStatic)
+	install(TARGETS traceQdcScan DESTINATION bin)
+endif(USE_ROOT)
 
 if(BUILD_SKELETON)
 	if(USE_HRIBF)
